# generic_game

./: .gitignore  .projectile  Cargo.toml  README.md  rls.toml
examples/: collision_test.rs  input_test.rs  physics_test.rs  primitive_test.rs  renderable_test.rs
examples/collision_test_game/: builder.rs  coll_circle.rs  coll_poly.rs  mod.rs
examples/input_test_game/: mod.rs
examples/physics_test_game/: builder.rs  coll_circle.rs  coll_rect.rs  mod.rs
examples/primitive_test_game/: mod.rs
examples/renderable_test_game/: mod.rs
src/: clock.rs  handler_basic.rs  handler_basic_with_console.rs  handlerbasic.rs  lib.rs  main.rs
src/animation/: animation_function_enum.rs  animation_spec.rs  animation_time.rs  animation_type.rs  animation_window.rs  mod.rs
src/collision/: circle.rs  coll_obj.rs  coll_obj_wrapper.rs  collidable_wrapper.rs  collider.rs  collision_data_type.rs  collision_details.rs  collision_logic.rs  collision_object.rs  collision_object_details.rs  collision_object_results.rs  collision_object_wrapper.rs  collision_results.rs  con_poly.rs  mod.rs  tests.rs
src/debug/: clock.rs  clock_writer.rs  mod.rs
src/games/: input_test_game.rs  mod.rs  primitive_test_game.rs  rectangle_game.rs  view_details.rs
src/geometry/: bezier_2d.rs  bezier_patch.rs  cartesian_rectangle.rs  circle.rs  con_poly.rs  interpolate.rs  interval.rs  interval_collection.rs  legendre.rs  line.rs  matrix3.rs  matrix4.rs  mod.rs  point.rs  point3.rs  poly.rs  polynomial.rs  polynomial2d.rs  rect.rs  rectangle.rs  rotation.rs  to_renderable.rs  to_renderables.rs  twodtransformable.rs  vect.rs
(+143 files in other folders)
