[package]
name = "generic_game"
version = "0.0.3"
authors = ["Jonesey13 <adj27@cam.ac.uk>"]

[dependencies]
multiinput = "0.0.13"
nalgebra = "*"
glium = { version = "*", features = ["glutin"] }
num = "*"
time = "*"
unicode-normalization = "*"
rusttype = { git = "https://github.com/Jonesey13/rusttype.git", rev = "a809432" }
rand = "*"
lazy_static = "*"
libloading = "*"
winapi = { version = "0.3", features = ["winnt", "shellscalingapi"] }
image = "*"

[dependencies.bitflags]
version = "*"


