[package]
name = "generic_game"
version = "0.0.6"
authors = ["Jonesey13 <adj27@cam.ac.uk>"]

[dependencies]
multiinput = "0.0.14"
glium = { version = "*", features = ["glutin"] }
time = "*"
unicode-normalization = "*"
rusttype = { version = "*", features = ["gpu_cache"] }
rand = "*"
lazy_static = "*"
libloading = "*"
winapi = { version = "0.3", features = ["winnt", "shellscalingapi"] }
image = "*"

[dependencies.bitflags]
version = "1.0.3"


